--- a/day02_springmvc_exception/pom.xml
+++ b/day02_springmvc_exception/pom.xml
@@ -5,11 +5,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.itheima</groupId>
-  <artifactId>day02_springmvc_01</artifactId>
+  <artifactId>day02_springmvc_exception</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
-  <name>day02_springmvc_01 Maven Webapp</name>
+  <name>day02_springmvc_exception Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -70,33 +70,10 @@
       <artifactId>jackson-annotations</artifactId>
       <version>2.9.1</version>
     </dependency>
-
-    <dependency>
-      <groupId>commons-fileupload</groupId>
-      <artifactId>commons-fileupload</artifactId>
-      <version>1.4</version>
-    </dependency>
-    <dependency>
-      <groupId>commons-io</groupId>
-      <artifactId>commons-io</artifactId>
-      <version>2.4</version>
-    </dependency>
-
-    <dependency>
-      <groupId>com.sun.jersey</groupId>
-      <artifactId>jersey-core</artifactId>
-      <version>1.18.1</version>
-    </dependency>
-    <dependency>
-		<groupId>com.sun.jersey</groupId>
-		<artifactId>jersey-client</artifactId>
-		<version>1.18.1</version>
-	</dependency>
-
   </dependencies>
 
   <build>
-    <finalName>day02_springmvc_01</finalName>
+    <finalName>day02_springmvc_exception</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
