--- a/Atcrowdfunding-main/src/main/resources/log4j.properties
+++ b/Atcrowdfunding-main/src/main/resources/log4j.properties
@@ -4,7 +4,7 @@ log4j.logger.org.apache.axis.enterprise=FATAL, CONSOLE
 
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
-log4j.appender.CONSOLE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss S} %-5p %c:%l - %m%n
+log4j.appender.CONSOLE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%l - %m%n
  
 #log4j.appender.LOGFILE=org.apache.log4j.FileAppender
 #log4j.appender.LOGFILE.file=d:axis.log
