activity框架的练习

--- a/Atcrowdfunding-main/src/main/resources/log4j.properties
+++ b/Atcrowdfunding-main/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootCategory=debug, CONSOLE, LOGFILE
+log4j.rootCategory=error, CONSOLE
 
 log4j.logger.org.apache.axis.enterprise=FATAL, CONSOLE
 
