--- a/Atcrowdfunding-main/src/main/resources/log4j.properties
+++ b/Atcrowdfunding-main/src/main/resources/log4j.properties
@@ -1,16 +1,16 @@
-log4j.rootCategory=error, CONSOLE
+log4j.rootCategory=error, CONSOLE,LOGFILE
 
-log4j.logger.org.apache.axis.enterprise=FATAL, CONSOLE
+log4j.logger.org.apache.axis.enterprise=FATAL, CONSOLE,LOGFILE
 
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%l - %m%n
  
-#log4j.appender.LOGFILE=org.apache.log4j.FileAppender
-#log4j.appender.LOGFILE.file=d:axis.log
-#log4j.appender.LOGFILE.Append=true
-#log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
-#log4j.appender.LOGFILE.layout.ConversionPattern=%d{ISO8601} %-6r [%15.15t] %-5p %30.30c %x - %m\n
+log4j.appender.LOGFILE=org.apache.log4j.FileAppender
+log4j.appender.LOGFILE.file=d:axis.log
+log4j.appender.LOGFILE.Append=true
+log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
+log4j.appender.LOGFILE.layout.ConversionPattern=%d{ISO8601} %-6r [%15.15t] %-5p %30.30c %x - %m\n
 #
 
 
