--- a/community/src/main/resources/application.properties
+++ b/community/src/main/resources/application.properties
@@ -2,3 +2,8 @@
 github.client.id=fe9dcfb978f05dbb7851
 github.client.secret=649a3dcf86b57315ae490c7ce7af72a27f3b69bb
 github.redirect.uri=http://localhost:8080/callback
+#spring.datasource.url=jdbc:h2:~/community
+spring.datasource.url=jdbc:mysql://localhost:3306/community
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
