完成退出及问题更新功能

--- a/community/src/main/resources/application.properties
+++ b/community/src/main/resources/application.properties
@@ -7,4 +7,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/community
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#¿ªÆôÍÕ·å±êÊ¶
 mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.type-aliases-package=life.majiang.community.model
+mybatis.mapper-locations=classpath:mapper/*.xml
